<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">


    <PreferenceCategory android:title="@string/setting_voe">

        <SwitchPreference
            android:defaultValue="true"
            android:key="@string/setting_voe_call_proximity_key"
            android:summary="在语音通话时开启距离传感器"
            android:title="@string/setting_voe_call_proximity" />

        <ListPreference
            android:defaultValue="2"
            android:entries="@array/setting_voe_audio_effect_entries"
            android:entryValues="@array/setting_voe_audio_effect_values"
            android:key="@string/setting_voe_audio_aec_key"
            android:title="@string/setting_voe_audio_aec" />

        <ListPreference
            android:defaultValue="2"
            android:entries="@array/setting_voe_audio_effect_entries"
            android:entryValues="@array/setting_voe_audio_effect_values"
            android:key="@string/setting_voe_audio_agc_key"
            android:title="@string/setting_voe_audio_agc" />

        <ListPreference
            android:defaultValue="2"
            android:entries="@array/setting_voe_audio_effect_entries"
            android:entryValues="@array/setting_voe_audio_effect_values"
            android:key="@string/setting_voe_audio_ns_key"
            android:title="@string/setting_voe_audio_ns" />

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/setting_vie">

        <SwitchPreference
            android:defaultValue="false"
            android:key="@string/setting_vie_crop_key"
            android:summary="在双人通话时按照对方屏幕比例裁剪画面"
            android:title="@string/setting_vie_crop" />

        <SwitchPreference
            android:defaultValue="true"
            android:key="@string/setting_vie_rotation_key"
            android:summary="通话时参考自己和对方设备角度旋转画面"
            android:title="@string/setting_vie_rotation" />

        <SwitchPreference
            android:defaultValue="true"
            android:key="@string/setting_vie_default_front_camera_key"
            android:summary="在视频通话时优先采用前置摄像头"
            android:title="@string/setting_vie_default_front_camera" />

        <SwitchPreference
            android:defaultValue="true"
            android:key="@string/setting_vie_fps_reported_key"
            android:summary="在视频通话时是否汇报帧率"
            android:title="@string/setting_vie_fps_reported" />

        <EditTextPreference
            android:defaultValue="0"
            android:inputType="number"
            android:key="@string/setting_vie_max_bitrate_key"
            android:title="@string/setting_vie_max_bitrate" />

        <ListPreference
            android:defaultValue="0"
            android:entries="@array/setting_vie_hw_encoder_entries"
            android:entryValues="@array/setting_vie_hw_encoder_values"
            android:key="@string/setting_vie_hw_encoder_key"
            android:title="@string/setting_vie_hw_encoder" />

        <ListPreference
            android:defaultValue="0"
            android:entries="@array/setting_vie_hw_decoder_entries"
            android:entryValues="@array/setting_vie_hw_decoder_values"
            android:key="@string/setting_vie_hw_decoder_key"
            android:title="@string/setting_vie_hw_decoder" />

        <ListPreference
            android:defaultValue="0"
            android:entries="@array/setting_vie_quality_entries"
            android:entryValues="@array/setting_vie_quality_values"
            android:key="@string/setting_vie_quality_key"
            android:title="@string/setting_vie_quality" />

        <ListPreference
            android:defaultValue="0"
            android:entries="@array/setting_vie_frame_scale_type_entries"
            android:entryValues="@array/setting_vie_frame_scale_type_values"
            android:key="@string/setting_vie_frame_scale_type_key"
            android:title="@string/setting_vie_frame_scale_type" />


        <ListPreference
            android:defaultValue="15"
            android:entries="@array/setting_vie_frame_rate_entries"
            android:entryValues="@array/setting_vie_frame_rate_values"
            android:key="@string/setting_vie_frame_rate_key"
            android:title="@string/setting_vie_frame_rate" />

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/setting_live">

        <SwitchPreference
            android:defaultValue="false"
            android:key="@string/setting_live_status_key"
            android:summary="在多人模式下进行直播推流"
            android:title="@string/setting_live_status" />

        <EditTextPreference
            android:defaultValue=" "
            android:inputType="text"
            android:key="@string/setting_live_url_key"
            android:title="@string/setting_live_url" />

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/setting_net">

        <SwitchPreference
            android:defaultValue="false"
            android:key="@string/setting_net_proxy_key"
            android:summary="使用网络代理(SOCKS5)"
            android:title="@string/setting_net_proxy" />

        <EditTextPreference
            android:dependency="@string/setting_net_proxy_key"
            android:key="@string/setting_net_proxy_user_name_key"
            android:title="@string/setting_net_proxy_user_name"/>

        <EditTextPreference
            android:dependency="@string/setting_net_proxy_key"
            android:key="@string/setting_net_proxy_user_password_key"
            android:title="@string/setting_net_proxy_user_password"/>

        <EditTextPreference
            android:dependency="@string/setting_net_proxy_key"
            android:key="@string/setting_net_proxy_addr_ip_key"
            android:title="@string/setting_net_proxy_addr_ip"/>

        <EditTextPreference
            android:dependency="@string/setting_net_proxy_key"
            android:key="@string/setting_net_proxy_addr_port_key"
            android:title="@string/setting_net_proxy_addr_port"/>


    </PreferenceCategory>


    <PreferenceCategory android:title="@string/setting_other">

        <ListPreference
            android:defaultValue="0"
            android:entries="@array/setting_other_device_rotation_entries"
            android:entryValues="@array/setting_other_device_rotation_values"
            android:key="@string/setting_other_device_default_rotation_key"
            android:title="@string/setting_other_device_default_rotation" />

        <ListPreference
            android:defaultValue="0"
            android:entries="@array/setting_other_device_rotation_entries"
            android:entryValues="@array/setting_other_device_rotation_values"
            android:key="@string/setting_other_device_rotation_fixed_offset_key"
            android:title="@string/setting_other_device_rotation_fixed_offset" />


        <SwitchPreference
            android:defaultValue="false"
            android:key="@string/setting_other_server_record_audio_key"
            android:summary="在服务器录制通话内容(需要额外配置)"
            android:title="@string/setting_other_server_record_audio" />

        <SwitchPreference
            android:defaultValue="false"
            android:key="@string/setting_other_server_record_video_key"
            android:summary="在服务器录制通话内容(需要额外配置)"
            android:title="@string/setting_other_server_record_video" />

    </PreferenceCategory>

</PreferenceScreen>